# SatSure-caseStudy

./: .gitignore  README.md  climate_analysis_results.xlsx  main.py  pyproject.toml  video_walkthrough.md
data/raw/: MH_precipitation.csv  MH_temperature.csv  MP_precipitation.csv  MP_temperature.csv
notebooks/: Climate_Data_Analysis.ipynb  climate_reselience_indicators.ipynb  crop_analysis.ipynb  economic_analysis.ipynb  infrastructure_assessment.ipynb  recomendations.ipynb  rough_EDA.ipynb
scripts/: run_analysis.py  run_analysis1.py  run_pipeline.py
src/: __init__.py  analyzer.py  data_loader.py  pipeline.py  resilience.py  transformer.py  validator.py
tests/: test_data_loader.py  test_transformer.py
