[project]
name = "satsure-casestudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.6.0",
    "geemap>=0.36.0",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "torch>=2.7.1",
]
