[project]
name = "satsure-casestudy"
version = "0.1.0"
description = "Climate data analysis pipeline for agricultural impact assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "matplotlib>=3.10.3",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.0.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "earthengine-api>=1.6.0",
    "geemap>=0.36.0",
    "torch>=2.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
